syntax = "proto3";

package actor;
import "google/protobuf/empty.proto";

message Actor {
  int64 id = 1;
  string name = 2;
  string birth_date = 3;
}

message CreateActorRequest {
  string name = 1;
  string birth_date = 2;
}

message UpdateActorRequest {
  int64 id = 1;
  string name = 2;
  string birth_date = 3;
}

message GetActorRequest {
  int64 id = 1;
}

message ListActorsResponse {
  repeated Actor actors = 1;
}

service ActorService {
  rpc ListActors(google.protobuf.Empty) returns (ListActorsResponse);
  rpc GetActor(GetActorRequest) returns (Actor);
  rpc CreateActor(CreateActorRequest) returns (Actor);
  rpc UpdateActor(UpdateActorRequest) returns (Actor);
  rpc DeleteActor(GetActorRequest) returns (google.protobuf.Empty);
}